# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.96.96 - XXX

  From Steven Knight:

  - Back out (most of) the Windows registry installer patch, which
    seems to not work on some versions of Windows.

  - Don't treat Java ".class" attributes as defining an inner class.

  - Fix detecting an erroneous Java anonymous class when the first
    non-skipped token after a "new" keyword is a closing brace.

  - Fix a regression when a CPPDEFINES list contains a tuple, the second
    item of which (the option value) is a construction variable expansion
    (e.g. $VALUE) and the value of the variable isn't a string.

  - Improve the error message if an IOError (like trying to read a
    directory as a file) occurs while deciding if a node is up-to-date.

  - Fix "maximum recursion" / "unhashable type" errors in $CPPPATH
    PathList expansion if a subsidiary expansion yields a stringable,
    non-Node object.

  - Generate API documentation from the docstrings (using epydoc).

  - Fix use of --debug=presub with Actions for out-of-the-box Builders.

  - User Guide updates: --random, AlwaysBuild(), --tree=,
    --debug=presub, --debug=stacktrace.

  From Jean-Baptiste Lab:

  - Remove hard-coded dependency on Python 2.2 from Debian packaging files.

  From Richard Viney:

  - Fix use of custom include and lib paths with Visual Studio 8.



RELEASE 0.96.95 - Mon, 12 Feb 2007 20:25:16 -0600

  From Anatoly:

  - Add the scons.org URL and a package description to the setup.py
    arguments.

  - Have the Windows installer add a registry entry for scons.bat in the
    "App Paths" key, so scons.bat can be executed without adding the
    directory to the %PATH%.  (Python itself works this way.)

  From Anonymous:

  - Fix looking for default paths in Visual Studio 8.0 (and later).

  - Add -lm to the list of default D libraries for linking.

  From Matt Doar: