@@ -1,0 +1,58 @@
+#!/usr/bin/env python
+#
+# __COPYRIGHT__
+#
+# Permission is hereby granted, free of charge, to any person obtaining
+# a copy of this software and associated documentation files (the
+# "Software"), to deal in the Software without restriction, including
+# without limitation the rights to use, copy, modify, merge, publish,
+# distribute, sublicense, and/or sell copies of the Software, and to
+# permit persons to whom the Software is furnished to do so, subject to
+# the following conditions:
+#
+# The above copyright notice and this permission notice shall be included
+# in all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY
+# KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
+# WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+#
+
+__revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
+
+"""
+Simple "Hello, world" test of linking with the Intel C++ compiler, icpc.
+
+This tests for a bug (1415) where our initialization of the linker to
+$CC prevented automatic linking of C++ source.
+"""
+
+import TestSCons
+
+test = TestSCons.TestSCons()
+
+icpc = test.where_is('icpc')
+if not icpc:
+    test.skip_test("Could not find 'icpc'; skipping test(s).\n")
+
+test.write('SConstruct', """
+env = Environment(tools=['default', 'intelc'])
+env.Program('hw', 'hw.cpp')
+""")
+
+test.write('hw.cpp', """\
+int
+main()
+{
+    std::cout<<"hw\\n";
+    return 0;
+}
+""")
+
+test.run(arguments = '.')
+
+test.pass_test()
